--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 # N?I KHAI BÁO C?U HÌNH Spring boot
 # thay ??i port s? d?ng cho s
 server.port=9090
+spring.datasource.url=jdbc:mysql://localhost:3307/crm_app
+spring.datasource.username=root
+spring.datasource.password=admin
+
+spring.jpa.hibernate.ddl-auto=none
